Fix SwarmTest CI failure - staged bootstrap approach
Use staged bootstrap initialization to fix CI resource contention:
- Start node 0 alone, wait for initialization (60s CI)
- Then start nodes 1-2 joining through node 0 (120s CI)
- Prevents connection failures when nodes try to join before node 0 is ready

This matches ChurnTest's working pattern and resolves the CI timeout where
3-node bootstrap kernel failed to stabilize in 120s on resource-constrained
runners.

References: PR #40 (Bootstrap kernel optimization)